new code implemented

--- a/childPages/childTemplate.html
+++ b/childPages/childTemplate.html
@@ -100,17 +100,17 @@
      <p> paragragh tag </p>
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
-      <li><a href="https://wmonk57.github.io/Sandbox-Learning-HTML.github.io/">Home Page</a></li>
+      <li><a href="">Home Page</a></li>
       <br>
-      <li><a href="META DATA.html"> Meta Data, must view in WYSIWYG </a></li>
+      <li><a href=""> Meta Data, must view in WYSIWYG </a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Learning-HTML.github.io/PreTemplate%20exp%20pages/HP%20tags.html">Text Expiremental Page</a></li>
+      <li><a href="">Text Expiremental Page</a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Learning-HTML.github.io/childPages/childTemplate-VWunits.html">View port list 1-6</a></li>
+      <li><a href="">View port list 1-6</a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Learning-HTML.github.io/childPages/Images.html">image #1</a></li>
+      <li><a href="">image #1</a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Learning-HTML.github.io/childPages/childTemplate-VWunits.html">child template</a></li>
+      <li><a href="">child template</a></li>
     </ul>
 
      <a>home page</a>
@@ -209,13 +209,6 @@
 
 
        <footer class="footer" style="text-align: center;"> Footer h tags
-       <h1> H1: text </h1>
-       <h2> H2: text </h2>
-       <h3> H3: text </h3>
-       <h4> H4: text </h4>
-       <h5> H5: text </h5>
-       <h6> H6: text </h6>
-       <h7> H7: text </h7>
        <p> paragragh tag </p>
        </footer>
 
