--- a/childPages/childTemplate.html
+++ b/childPages/childTemplate.html
@@ -3,7 +3,7 @@
   <head>
       <!-- Used by the Keyboard-->
       <meta charset="utf-8">
-      <title> KABOOM!!!!!! </title>
+      <title>Template page</title>
       <!-- Tab Favicon can be changed too, Google this-->
       <link rel="icon" type="image/x-icon" href="favicon.ico">
       <!-- Used by browser or Google Search-->
@@ -84,7 +84,7 @@
 
   <!--Start here, BODY Semantic Tags-->
   <body>
-     <div><H1>THIS IS A DIVISION!</H1></div>
+    <div> This page is not complete</div>
 
 
      <header class="header">
