--- a/childPages/childTemplate.html
+++ b/childPages/childTemplate.html
@@ -8,8 +8,8 @@
       <link rel="icon" type="image/x-icon" href="favicon.ico">
       <!-- Used by browser or Google Search-->
       <meta name="author" content="Will MONK Big Brain Man">
-      <meta name="description" content="I am just as good as Max Verstappen">
-      <meta name="keywords" content="learning, html, cool, car, misinformation, boilerplate, starter">
+      <meta name="description" content="My music player Promo site">
+      <meta name="keywords" content="music, music player, cool, fun, intresting, w.monk">
       <meta name="veiwport" content="width=device-width, initial- scale=1.0">
       <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
       <!-- meta http-equiv="default-style" content=""--> <!-- content matches css link exactly-->
@@ -30,10 +30,9 @@
          }
           div{
              border:thin dotted rgb(255, 68, 0)
-          }
-          
-          .header{
-           border: 1px solid rgb(47, 226, 11);
+          } 
+          header{
+            border: 1px solid rgb(47, 226, 11);
            padding: 15px;
            font-size: 5vw;
           }
@@ -41,7 +40,7 @@
           width: 25%;
           float: left;
           padding: 15px;
-          border: 1px solid rgb(115, 0, 255)
+          border: 1px  rgb(115, 0, 255)
 
           }
           .main{
@@ -55,7 +54,7 @@
           width:25%;
           float: left;
           padding: 15px;
-          border: 5px solid rgb(65, 225, 142,)
+          border: 2px solid rgb(0, 0, 0)
 
           }
           .footer{
@@ -88,8 +87,8 @@
 
 
      <header class="header">
-     <h1 style="text-align: center;">Template Page!!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
-     <h4> sub title </h4>  
+     <h1 style="text-align: center;">Template Page</h1>
+     <h4> this page is my page for a base of another page</h4>  
      <h7> H7: text </h7>
      <p> paragragh tag </p>
      <a>Hyper link tag text only</a>
@@ -101,24 +100,9 @@
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
       <li><a href="">Home Page</a></li>
-      <br>
-      <li><a href=""> Meta Data, must view in WYSIWYG </a></li>
-      <br>
-      <li><a href="">Text Expiremental Page</a></li>
-      <br>
-      <li><a href="">View port list 1-6</a></li>
-      <br>
-      <li><a href="">image #1</a></li>
-      <br>
-      <li><a href="">child template</a></li>
-    </ul>
 
-     <a>home page</a>
-     <a>text emperimental</a>
-     <a> viewportON</a>
-     <a> meta data</a>
-     <a> child template</a>
-     <a> images</a>
+
+
      <br>
        <br>
        <br>
@@ -208,7 +192,7 @@
         </aside>
 
 
-       <footer class="footer" style="text-align: center;"> Footer h tags
+       <footer class="footer" style="text-align: center;"> 
        <p> paragragh tag </p>
        </footer>
 
