--- a/childPages/childTemplate.html
+++ b/childPages/childTemplate.html
@@ -40,7 +40,7 @@
           width: 25%;
           float: left;
           padding: 15px;
-          border: 1px  rgb(115, 0, 255)
+          border: 1px solid rgb(115, 0, 255)
 
           }
           .main{
