--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
 
      <header class="header">
-     <h1 style="text-align: center;">Template Page</h1>
-     <h4> this page is my page for a base of another page</h4>  
+     <h1 style="text-align: center;">This is my music Player</h1>
+     <h4> this is a picture of my Music player</h4>  
      <h7> H7: text </h7>
      <p> paragragh tag </p>
      <a>Hyper link tag text only</a>
