--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -26,7 +26,7 @@
       <style>
          *{
            box-sizing: border-box;
-           font-size: 1vw;
+           font-size: 1.75vw;
          }
           div{
              border:thin dotted rgb(255, 68, 0)
@@ -87,8 +87,11 @@
 
 
      <header class="header">
-     <h1 style="text-align: center;">About The Developer</h1>
-     <h4> This is a Page about me</h4>  
+     <h1 style="text-align: center;">Template Page</h1>
+     <h4> this page is my page for a base of another page</h4>  
+     <h7> H7: text </h7>
+     <p> paragragh tag </p>
+     <a>Hyper link tag text only</a>
      </header>
 
      <nav class="nav">Nav H-tags
