--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -99,7 +99,7 @@
      <p> paragragh tag </p>
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
-      <li><a href="">Home Page</a></li>
+      <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
 
 
 
