--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -87,11 +87,8 @@
 
 
      <header class="header">
-     <h1 style="text-align: center;">Template Page</h1>
-     <h4> this page is my page for a base of another page</h4>  
-     <h7> H7: text </h7>
-     <p> paragragh tag </p>
-     <a>Hyper link tag text only</a>
+     <h1 style="text-align: center;">Developer Page</h1>
+     <h4> this page is all about me, The Dev</h4>  
      </header>
 
      <nav class="nav">Nav H-tags
@@ -105,6 +102,16 @@
 
 
      <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
        <br>
        <br>
        <br>
