--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -87,11 +87,8 @@
 
 
      <header class="header">
-     <h1 style="text-align: center;">Template Page</h1>
-     <h4> this page is my page for a base of another page</h4>  
-     <h7> H7: text </h7>
-     <p> paragragh tag </p>
-     <a>Hyper link tag text only</a>
+     <h1 style="text-align: center;">Feature Page</h1>
+     <h4> Here are the main features of my Music Player</h4>  
      </header>
 
      <nav class="nav">Nav H-tags
@@ -109,6 +106,17 @@
        <br>
        <br>
        <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br><br>
        <br>
        <br>
        <br>
