--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -3,7 +3,7 @@
   <head>
       <!-- Used by the Keyboard-->
       <meta charset="utf-8">
-      <title>Template page</title>
+      <title>Developer Page</title>
       <!-- Tab Favicon can be changed too, Google this-->
       <link rel="icon" type="image/x-icon" href="favicon.ico">
       <!-- Used by browser or Google Search-->
