--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -3,7 +3,7 @@
   <head>
       <!-- Used by the Keyboard-->
       <meta charset="utf-8">
-      <title>Template page</title>
+      <title>Feature Page</title>
       <!-- Tab Favicon can be changed too, Google this-->
       <link rel="icon" type="image/x-icon" href="favicon.ico">
       <!-- Used by browser or Google Search-->
@@ -143,7 +143,11 @@
         <h2> section </h2>
         <h4> continues the main </h4>
         <h5> less important </h5>
-        <p> paragragh tag </p>
+        <p>
+          <img src="" alt="" title="Hybrid Theory" style="max-width:100%;height:auto;">
+          <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
+          <!-- Play with percentages-->
+      </p>
         
         <article class="article"> article tags 
           <h2> words</h2>
