--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -98,7 +98,7 @@
      <ul style="list-style-type:lower-latin;">
       <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Developer.html">Developer page</a></li>
-
+      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Music%20Included.html">Home Page</a></li>
 
      <br>
        <br>
@@ -143,11 +143,7 @@
         <h2> section </h2>
         <h4> continues the main </h4>
         <h5> less important </h5>
-        <p>
-          <img src="" alt="" title="Hybrid Theory" style="max-width:100%;height:auto;">
-          <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
-          <!-- Play with percentages-->
-      </p>
+
         
         <article class="article"> article tags 
           <h2> words</h2>
