--- a/index.html
+++ b/index.html
@@ -99,13 +99,11 @@
      <p> paragragh tag </p>
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
-      <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
-      <br>
       <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Developer.html">Developer Page</a></li>
       <br>
       <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Features.html">Feature Page</a></li>
       <br>
-
+      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Music%20Included.html">Home Page</a></li>
 
 
      <br>
