--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -3,7 +3,7 @@
   <head>
       <!-- Used by the Keyboard-->
       <meta charset="utf-8">
-      <title>Template page</title>
+      <title>Music In Player</title>
       <!-- Tab Favicon can be changed too, Google this-->
       <link rel="icon" type="image/x-icon" href="favicon.ico">
       <!-- Used by browser or Google Search-->
@@ -87,8 +87,8 @@
 
 
      <header class="header">
-     <h1 style="text-align: center;">Template Page</h1>
-     <h4> this page is my page for a base of another page</h4>  
+     <h1 style="text-align: center;">The Music Included in my Music Player</h1>
+     <h4> This pge contains some examples of music included in the music player</h4>  
      <h7> H7: text </h7>
      <p> paragragh tag </p>
      <a>Hyper link tag text only</a>
@@ -124,7 +124,7 @@
        <p> paragraghs can include different types of <sub>small</sub> and <sup>big</sup>writing fonts.</p>
        
        <section class="section">section H-tags
-        <h3>Some music i will include will be by Linkin Park, with some of their hit albums, Hybrid Theory, Meterora, Minutes to Midnight, and many many more.</h3>
+        <h3>Some music I will include will be by Linkin Park, with some of their hit albums, Hybrid Theory, Meterora, Minutes to Midnight, and many many more.</h3>
         <p>
             <img src="https://upload.wikimedia.org/wikipedia/en/2/2a/Linkin_Park_Hybrid_Theory_Album_Cover.jpg" alt="../Linkin_Park_Hybrid_Theory_Album_Cover.jpg" title="Hybrid Theory, Released in 2000" style="max-width:100%;height:auto;">
             <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
