--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -123,15 +123,20 @@
        <h1> main </h1>
        <p> paragraghs can include different types of <sub>small</sub> and <sup>big</sup>writing fonts.</p>
        
-       <section class="section">section H-tags
-        <h3>Some music I will include will be by Linkin Park, with some of their hit albums, Hybrid Theory, Meterora, Minutes to Midnight, and many many more.</h3>
+       <section class="section">
+        <h3>Some music I will include will be by Linkin Park, with some of their hit albums, Hybrid Theory, Meteora, Minutes to Midnight, and many many more.</h3>
         <p>
             <img src="https://upload.wikimedia.org/wikipedia/en/2/2a/Linkin_Park_Hybrid_Theory_Album_Cover.jpg" alt="../Linkin_Park_Hybrid_Theory_Album_Cover.jpg" title="Hybrid Theory, Released in 2000" style="max-width:100%;height:auto;">
             <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
             <!-- Play with percentages-->
         </p>
+        <p>
+            <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Linkin_Park_Meteora_Album_Cover.jpg" alt="../Linkin_Park_Meteora_Album_Cover.jpg" title="Meteora, Released in 2002" style="max-width:100%;height:auto;">
+            <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
+            <!-- Play with percentages-->
+        </p>
         
-        <article class="article"> article tags 
+        <article class="article"> 
 
 
           <br>
