--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -88,10 +88,7 @@
 
      <header class="header">
      <h1 style="text-align: center;">The Music Included in my Music Player</h1>
-     <h4> This pge contains some examples of music included in the music player</h4>  
-     <h7> H7: text </h7>
-     <p> paragragh tag </p>
-     <a>Hyper link tag text only</a>
+     <h4> This page contains some examples of music included in the music player</h4>  
      </header>
 
      <nav class="nav">Nav H-tags
@@ -132,6 +129,16 @@
         </p>
         <p>
             <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Linkin_Park_Meteora_Album_Cover.jpg" alt="../Linkin_Park_Meteora_Album_Cover.jpg" title="Meteora, Released in 2002" style="max-width:100%;height:auto;">
+            <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
+            <!-- Play with percentages-->
+        </p>
+        <p>
+            <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Linkin_Park_Meteora_Album_Cover.jpg" alt="../Linkin_Park_Meteora_Album_Cover.jpg" title="Meteora, Released in 2002" style="max-width:100%;height:auto;">
+            <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
+            <!-- Play with percentages-->
+        </p>
+        <p>
+            <img src="" alt="" title="Minutes to Midnight, Released in 2002" style="max-width:100%;height:auto;">
             <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
             <!-- Play with percentages-->
         </p>
