--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -135,12 +135,7 @@
         
         <article class="article"> 
             <p>
-                <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Linkin_Park_Meteora_Album_Cover.jpg" alt="../Linkin_Park_Meteora_Album_Cover.jpg" title="Meteora, Released in 2002" style="max-width:100%;height:auto;">
-                <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
-                <!-- Play with percentages-->
-            </p>
-            <p>
-                <img src="" alt="" title="Minutes to Midnight, Released in 2002" style="max-width:100%;height:auto;">
+                <img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Minutes_to_Midnight_cover.jpg" alt="../Minutes_to_Midnight_cover.jpg" title="Minutes to Midnight, Released in 2002" style="max-width:100%;height:auto;">
                 <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
                 <!-- Play with percentages-->
             </p>
