--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -139,6 +139,12 @@
                 <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
                 <!-- Play with percentages-->
             </p>
+            Friendly fire, Linkin Parks newset release, is a unreleased song from their One More Light album from 2017
+            <p>
+                <img src="https://i.discogs.com/WoVHNofqzBAmC0my_sGADbxD-2O-0t0OmcL2GWjoHXw/rs:fit/g:sm/q:90/h:600/w:600/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTI5ODkz/NzUwLTE3MDg2Nzc1/NzItNjAzMC5qcGVn.jpeg" alt="../Friendly_Fire.jpg" title="freindly Fire, released as a single in 2024" style="max-width:100%;height:auto;">
+                <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
+                <!-- Play with percentages-->
+            </p>
 
           <br>
           <br>
