--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
      <p> picture goes here </p>
      </header>
 
-     <nav class="nav">Nav H-tags
-     <h2 style="text-align: center;"> NAVIGATION </h2> 
-     <p> paragragh tag </p>
+     <nav class="nav">
+     <h2 style="text-align: center;"> Other Pages </h2> 
+ 
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
       <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Developer.html">Developer Page</a></li>
