--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -103,7 +103,7 @@
      </nav>
 
      <main class="main">
-       <h2>included Music</h2>
+       <h2>Included Music</h2>
       
        
        <section class="section">
