--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -145,10 +145,8 @@
 
        </main>
       
-       <aside class="aside">Aside Space H-tags
-        <h1> Aside space </h1>
-        <h3> experiment </h3>
-        <p> paragragh tag </p>
+       <aside class="aside">Hit songs
+
        <br>
        <br>
        <br>
