--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -149,7 +149,7 @@
         <br>
         <a href="https://www.youtube.com/watch?v=4qlCC1GOwFw" target="_blank"> One Step Closer</a>
         <br>
-        <a href="" target="_blank"> Papercut</a>
+        <a href="https://www.youtube.com/watch?v=vjVkXlxsO8Q" target="_blank"> Papercut</a>
         <br>
         <a href="" target="_blank"> </a>
         <br>
