--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -151,10 +151,10 @@
         <br>
         <a href="https://www.youtube.com/watch?v=vjVkXlxsO8Q" target="_blank"> Papercut</a>
         <br>
-        <a href="" target="_blank"> </a>
+        <a href="https://www.youtube.com/watch?v=HNCgBuI2eJc" target="_blank"> forgotten</a>
         <br>
         <a href="" target="_blank"> Somewhere I Belong</a>
-        <br>
+        <br> 
         <a href="" target="_blank"> Place for My Head</a>
         <br>
         <a href="" target="_blank"> Faint</a>
