--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -151,9 +151,9 @@
         <br>
         <a href="https://www.youtube.com/watch?v=vjVkXlxsO8Q" target="_blank"> Papercut</a>
         <br>
-        <a href="https://www.youtube.com/watch?v=HNCgBuI2eJc" target="_blank"> forgotten</a>
+        <a href="https://www.youtube.com/watch?v=HNCgBuI2eJc" target="_blank"> Forgotten</a>
         <br>
-        <a href="" target="_blank"> Somewhere I Belong</a>
+        <a href="https://www.youtube.com/watch?v=3t2WkCudwfY" target="_blank"> Somewhere I Belong</a>
         <br> 
         <a href="" target="_blank"> Place for My Head</a>
         <br>
