--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -153,9 +153,9 @@
         <br>
         <a href="https://www.youtube.com/watch?v=HNCgBuI2eJc" target="_blank"> Forgotten</a>
         <br>
-        <a href="https://www.youtube.com/watch?v=3t2WkCudwfY" target="_blank"> Somewhere I Belong</a>
+        <a href="https://www.youtube.com/watch?v=zsCD5XCu6CM" target="_blank"> Somewhere I Belong</a>
         <br> 
-        <a href="" target="_blank"> Place for My Head</a>
+        <a href="https://www.youtube.com/watch?v=3t2WkCudwfY" target="_blank"> Place for My Head</a>
         <br>
         <a href="" target="_blank"> Faint</a>
         <br>
