--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -157,7 +157,7 @@
         <br> 
         <a href="https://www.youtube.com/watch?v=3t2WkCudwfY" target="_blank"> Place for My Head</a>
         <br>
-        <a href="" target="_blank"> Faint</a>
+        <a href="https://www.youtube.com/watch?v=LYU-8IFcDPw" target="_blank"> Faint</a>
         <br>
         <a href="" target="_blank"> Given Up</a>
         <br>
