--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -159,7 +159,7 @@
         <br>
         <a href="https://www.youtube.com/watch?v=LYU-8IFcDPw" target="_blank"> Faint</a>
         <br>
-        <a href="" target="_blank"> Given Up</a>
+        <a href="https://www.youtube.com/watch?v=0xyxtzD54rM" target="_blank"> Given Up</a>
         <br>
         <a href="" target="_blank"> In Pieces</a>
         <br>
