--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -161,8 +161,9 @@
         <br>
         <a href="https://www.youtube.com/watch?v=0xyxtzD54rM" target="_blank"> Given Up</a>
         <br>
-        <a href="" target="_blank"> In Pieces</a>
+        <a href="https://www.youtube.com/watch?v=NaRBn6QIMcQ" target="_blank"> In Pieces</a>
         <br>
+        <a href="https://www.youtube.com/watch?v=NaRBn6QIMcQ" target="_blank"> In Pieces</a>
       
       
        <br>
@@ -248,7 +249,7 @@
 
   </body>
   <footer style="text-align: center;">
-   <blockquote cite="">
+   <blockquote cite="links to music from Linkin Park on Youtube">
        <!-- Date Accessed 20240214-->
      </blockquote>
      <p>
