--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -163,7 +163,7 @@
         <br>
         <a href="https://www.youtube.com/watch?v=NaRBn6QIMcQ" target="_blank"> In Pieces</a>
         <br>
-        <a href="" target="_blank"> Friendly Fire</a>
+        <a href="https://www.youtube.com/watch?v=HMluqSGag5E" target="_blank"> Friendly Fire</a>
       
       
        <br>
