--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -91,14 +91,14 @@
      <h4> this page is all about me, The Dev</h4>  
      </header>
 
-     <nav class="nav">Nav H-tags
-     <h2 style="text-align: center;"> NAVIGATION </h2> 
-     <p> paragragh tag </p>
+     <nav class="nav">
+     <h2 style="text-align: center;"> Other Pages </h2> 
+     
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
       <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Features.html">Features of my music player</a></li>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Music%20Included.html">Home Page</a></li>
+      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Music%20Included.html">Music Included in Player</a></li>
 
 
      <br>
