--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -98,7 +98,7 @@
      <ul style="list-style-type:lower-latin;">
       <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Developer.html">Developer page</a></li>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Music%20Included.html">Home Page</a></li>
+      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Music%20Included.html">Music Included in Player </a></li>
 
      <br>
        <br>
