--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <br>
       <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Features.html">Feature Page</a></li>
       <br>
-      <li><a href="file://fs-052/studuser$/Gr10/w.monk/My%20Documents/GitHub/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Music%20Included.html">Included Music</a></li>
+      <li><a href="../Sandbox-Music-Player-Promo.github.io/developer and features pages/Music Included.html">Included Music test</a></li>
 
 
      <br>
