bug fix test 107

--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -98,9 +98,9 @@
      <ul style="list-style-type:lower-latin;">
       <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <br>
-      <li><a href="../Sandbox-Music-Player-Promo.github.io/developer and features pages/Developer.html">Developer page</a></li>
+      <li><a href="../developer and features pages/Developer.html">Developer page</a></li>
       <br>
-      <li><a href="../Sandbox-Music-Player-Promo.github.io/developer and features pages/Music Included.html">Music Included in Player </a></li>
+      <li><a href="../developer and features pages/Music Included.html">Music Included in Player </a></li>
 
      <br>
        <br>
