--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -98,9 +98,9 @@
      <ul style="list-style-type:lower-latin;">
       <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <br>
-      <li><a href="../Sandbox-Music-Player-Promo.github.io/developer and features pages/Developer.html">Developer Page</a></li>
+      <li><a href="../developer and features pages/Developer.html">Developer Page</a></li>
       <br>
-      <li><a href="../Sandbox-Music-Player-Promo.github.io/developer and features pages/Features.html">Features Page</a></li>
+      <li><a href="../developer and features pages/Features.html">Features Page</a></li>
 
      </nav>
 
