--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -98,7 +98,7 @@
      <ul style="list-style-type:lower-latin;">
       <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <br>
-      <li><a href="../developer and features pages/Developer.html">Developer page</a></li>
+      <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Developer.html">Developer page</a></li>
       <br>
       <li><a href="../developer and features pages/Music Included.html">Music Included in Player </a></li>
 
