--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -128,8 +128,7 @@
      </nav>
 
      <main class="main">Main H tags
-       <h1> main </h1>
-       <p> paragraghs can include different types of <sub>small</sub> and <sup>big</sup>writing fonts.</p>
+       <h1> THE DEVELOPER</h1>
        
        <h3>cheese</h3>
        <h3>more text</h3>
