--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -129,11 +129,12 @@
 
      <main class="main">Main H tags
        <h1> THE DEVELOPER</h1>
-       
-       <h3>cheese</h3>
-       <h3>more text</h3>
-       <br>
-       <br>
+       <p>
+        <img src="https://qph.cf2.quoracdn.net/main-qimg-c124e649fcc0f98fc87e672caa25d42d-lq" alt="../Images/DevPicture101.jfif" title="DEV" style="max-width:50%;height:auto;">
+        <!-- Will size to a max with of Width 1300, height 606, but not bigger -->
+        <!-- Play with percentages-->
+    </p>
+
 
        <section class="section">section H-tags
         <h2> section </h2>
