--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -88,7 +88,7 @@
 
      <header class="header">
      <h1 style="text-align: center;">The Music Included in my Music Player</h1>
-     <h4> This page contains some examples of music included in the music player</h4>  
+     <h4 style="text-align: center;"> This page contains some examples of music included in the music player</h4>  
      </header>
 
      <nav class="nav">
