--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -166,7 +166,7 @@
        <aside class="aside">Aside Space H-tags
         <h1> My name is Mr. BACONATOR and I am the Developer of this amazing Music Player </h1>
        <br>
-        <h3> I am a 24 year old man who is very intelligent. I have a masters degree in forensic science. </h3>
+        <h3> I am a 24 year old man who is very intelligent. I have a masters degree in forensic science. I am a very skillful coder and game player. </h3>
         
 
 
