--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -166,7 +166,7 @@
        <aside class="aside">Aside Space H-tags
         <h1> My name is Mr. BACONATOR and I am the Developer of this amazing Music Player </h1>
        <br>
-        <h3> I am a 24 year old man who is very intelligent. I have a masters degree in forensic science. I am a very skillful coder and game player. </h3>
+        <h3> I am an amazing coder and have made many games in the past. One of these games is space cat vs selestial dogs. this game involves a cat who eats multiple space dogs who suommon lightning bolts that attack the cat/player. the player can grow and Evolve over time using their points. after levelling up multiple times you get the rare ending screen signifing the reward of completing the game </h3>
         
 
 
