--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -74,7 +74,7 @@
              float:left;
              width: 100%;
              padding: 15px;
-             border: thick double turquoise;
+             border: thick double rgb(132, 255, 0);
           }
 
       </style>
@@ -135,17 +135,9 @@
         <!-- Play with percentages-->
     </p>
 
+        <article class="article"> 
+          <h2> If you enjoy my work please consider giving me advice to help me become a better coder</h2>
 
-       <section class="section">section H-tags
-        <h2> section </h2>
-        <h4> continues the main </h4>
-        <h5> less important </h5>
-        <p> paragragh tag </p>
-        
-        <article class="article"> article tags 
-          <h2> words</h2>
-          <h5>minor stuff</h5>
-          <p> paragragh tags</p>
         </article>
       </section>
        
