--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -54,7 +54,7 @@
           width:25%;
           float: left;
           padding: 15px;
-          border: 2px solid rgb(0, 0, 0)
+          border: 2px solid rgba(0, 0, 0, 0.489)
 
           }
           .footer{
@@ -68,13 +68,13 @@
           width: 100%;
           float:left;
           padding: 15px;
-          border: 5px solid springgreen
+          border: 5px solid rgb(255, 68, 0)
          }
          .article{
              float:left;
              width: 100%;
              padding: 15px;
-             border: thick double turquoise;
+             border: thick double rgb(255, 0, 0);
           }
 
       </style>
