--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -124,7 +124,7 @@
 
      </nav>
 
-     <main class="main">Main H tags
+     <main class="main">
        <h1> THE DEVELOPER</h1>
        <p>
         <img src="https://qph.cf2.quoracdn.net/main-qimg-c124e649fcc0f98fc87e672caa25d42d-lq" alt="../Images/DevPicture101.jfif" title="DEV" style="max-width:50%;height:auto;">
@@ -152,7 +152,7 @@
 
        </main>
       
-       <aside class="aside">Aside Space H-tags
+       <aside class="aside">
         <h1> My name is Mr. BACONATOR and I am the Developer of this amazing Music Player </h1>
        <br>
         <h3> I am an amazing coder and have made many games in the past. One of these games is space cat vs selestial dogs. this game involves a cat who eats multiple space dogs who suommon lightning bolts that attack the cat/player. the player can grow and Evolve over time using their points. after levelling up multiple times you get the rare ending screen signifing the reward of completing the game </h3>
