--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -45,6 +45,8 @@
 
           }
           .main{
+          background:gray;
+          color:deeppink;
           width: 75%;
           float: left;
           padding: 15px;
