--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -46,7 +46,7 @@
           }
           .main{
           background:gray;
-          color:deeppink;
+          color:black;
           width: 75%;
           float: left;
           padding: 15px;
