--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -29,14 +29,17 @@
            font-size: 1.75vw;
          }
           div{
+            background:gray;
              border:thin dotted rgb(255, 68, 0)
           } 
           header{
+            background:gray;
             border: 1px solid rgb(47, 226, 11);
            padding: 15px;
            font-size: 5vw;
           }
           .nav{ 
+         background:lawngreen;
           width: 100%;
           float: left;
           padding: 15px;
@@ -54,6 +57,7 @@
 
           }
           .aside{
+            background:gray;
           width:25%;
           float: left;
           padding: 15px;
@@ -61,19 +65,22 @@
 
           }
           .footer{
+            background:gray;
            float:left;
            width:100%;
           padding: 14px;
           border: 2px solid rgb(102, 0, 255)
 
           }
-          .section{ 
+          .section{
+            background:lawngreen; 
           width: 100%;
           float:left;
           padding: 15px;
           border: 5px solid rgb(255, 68, 0)
          }
          .article{
+          background:gray;
              float:left;
              width: 100%;
              padding: 15px;
