--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -30,16 +30,19 @@
          }
           div{
             background:gray;
+            color: red;
              border:thin dotted rgb(255, 68, 0)
           } 
           header{
             background:gray;
-            border: 1px solid rgb(47, 226, 11);
+            color: lawngreen;
+          
            padding: 15px;
            font-size: 5vw;
           }
           .nav{ 
          background:lawngreen;
+         color :gray;
           width: 100%;
           float: left;
           padding: 15px;
@@ -58,6 +61,7 @@
           }
           .aside{
             background:gray;
+            color: lawngreen;
           width:25%;
           float: left;
           padding: 15px;
@@ -66,14 +70,16 @@
           }
           .footer{
             background:gray;
+           color: lawngreen;
            float:left;
            width:100%;
           padding: 14px;
-          border: 2px solid rgb(102, 0, 255)
+         
 
           }
           .section{
             background:lawngreen; 
+            color: gray; 
           width: 100%;
           float:left;
           padding: 15px;
@@ -81,6 +87,7 @@
          }
          .article{
           background:gray;
+          color: lawngreen;
              float:left;
              width: 100%;
              padding: 15px;
