--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -52,7 +52,7 @@
           }
           .main{
           background:gray;
-          color:black;
+          color:lawngreen;
           width: 75%;
           float: left;
           padding: 15px;
