--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -42,7 +42,7 @@
           }
           .nav{ 
          background:lawngreen;
-         color :gray;
+         color :black;
           width: 100%;
           float: left;
           padding: 15px;
@@ -79,7 +79,7 @@
           }
           .section{
             background:lawngreen; 
-            color: gray; 
+            color: black; 
           width: 100%;
           float:left;
           padding: 15px;
