--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -78,7 +78,7 @@
 
           }
           .section{
-            background:lawngreen; 
+            background:rgb(85, 169, 0); 
             color: black; 
           width: 100%;
           float:left;
