--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -93,6 +93,10 @@
              padding: 15px;
            
           }
+          .blockquote{
+            background: lawngreen;
+            color:black;
+          }
 
       </style>
       <noscript>Running JavaScript is not allowed in the HTML page ... FYI: your Feature to execute scripts is turned off</noscript>
@@ -263,10 +267,10 @@
 
 
   </body>
-  <footer style="text-align: center;">
+  <footer style="text-align: center;" class="blockquote">
    <blockquote cite="links to music from Linkin Park on Youtube">
        <!-- Date Accessed 20240214-->
-     </blockquote>
+     </blockquote class= "blockquote">
      <p>
        <strong>"Whatever your doing give 100%, unless you donating blood."</strong>
        <em>- Bill Murray</em>
