--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -78,7 +78,7 @@
 
           }
           .section{
-            background:rgb(98, 197, 0); 
+            background:lawngreen; 
             color: black; 
           width: 100%;
           float:left;
