--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -91,9 +91,8 @@
      <h4> Here are the main features of my Music Player</h4>  
      </header>
 
-     <nav class="nav">Nav H-tags
+     <nav class="nav">
      <h2 style="text-align: center;"> NAVIGATION </h2> 
-     <p> paragragh tag </p>
     <!-- will change to none later, removing symbol from list-->
      <ul style="list-style-type:lower-latin;">
       <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
