--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -190,12 +190,10 @@
         </aside>
 
 
-       <footer class="footer" style="text-align: center;"> 
-       <p> paragragh tag </p>
-       </footer>
+      
 
   </body>
-  <footer style="text-align: center;">
+  <footer style="text-align: center;" class="nav">
    <blockquote cite="">
        <!-- Date Accessed 20240214-->
      </blockquote>
