--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -33,7 +33,7 @@
           } 
           header{
             background: black;
-            border: 1px solid rgb(47, 226, 11);
+           color:aqua;
            padding: 15px;
            font-size: 5vw;
           }
@@ -128,7 +128,7 @@
      </nav>
 
      <main class="main">
-       
+       <p> This Music player will be using music that is from Linkin Park and will contain somr great features! one of these will be the the settings menu which will pop up after puhing on the settings gear. There also may be a few easter eggs that I may hide in the music player for testers to discover. Hopefully there wont be many bugs left after I release thi smusic player, feel free to contact me if there are major issues.  </p>
        <br>
        <br>
 
