fcfcfcytyffccf hhgvuurxezweqewsrdtfyguhlihlygftdrsy5eaw2tserdtfyguhijohygtfrdesw4ase565r76y87909i-9087y6t5432456786765t65rtt6tr5t876t8u7t6ty87t6u76t5rt4e53we54ew3e4e3wq2ww32q1qwesdrt76tfgiuytghi9tfghiu876trfgu6t5rduu876trfghjiuhn

--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -163,7 +163,7 @@
 
        </main>
       
-       <aside class="aside">Aside Space H-tags
+       <aside class="aside">
 
        <br>
        <br>
