--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -38,44 +38,50 @@
            font-size: 5vw;
           }
           .nav{ 
+            background: black;
+            color: aqua;
           width: 25%;
           float: left;
           padding: 15px;
-          border: 1px solid rgb(115, 0, 255)
 
           }
           .main{
+            background: aqua;;
+            color: black;
           width: 50%;
           float: left;
           padding: 15px;
-          border:1px double rgb(0, 200, 255)
 
           }
           .aside{
+            background: black;
+            color: aqua;
           width:25%;
           float: left;
           padding: 15px;
-          border: 2px solid rgb(0, 0, 0)
 
           }
           .footer{
+            background: black;
+            color: aqua;
            float:left;
            width:100%;
           padding: 14px;
-          border: 2px solid rgb(102, 0, 255)
 
           }
           .section{ 
+            background: aqua;
+            color: black;
           width: 100%;
           float:left;
           padding: 15px;
-          border: 5px solid springgreen
          }
          .article{
+          background: black;
+            color: aqua;
              float:left;
              width: 100%;
              padding: 15px;
-             border: thick double turquoise;
           }
 
       </style>
