--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -30,7 +30,7 @@
 
           } 
           header{
-            background:gray;
+            background:black;
             color: lawngreen;
           
            padding: 15px;
@@ -47,7 +47,7 @@
 
           }
           .main{
-          background:gray;
+          background:black;
           color:lawngreen;
           width: 75%;
           float: left;
@@ -56,7 +56,7 @@
 
           }
           .aside{
-            background:gray;
+            background:black;
             color: lawngreen;
           width:25%;
           float: left;
@@ -65,7 +65,7 @@
 
           }
           .footer{
-            background:gray;
+            background:black;
            color: lawngreen;
            float:left;
            width:100%;
@@ -82,7 +82,7 @@
          
          }
          .article{
-          background:gray;
+          background:black;
           color: lawngreen;
              float:left;
              width: 100%;
