--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -209,7 +209,7 @@
        <br>
        <br> <br>
        <br> <br> <br>
-
+       <br>
 
         </aside>
 
@@ -217,7 +217,7 @@
       
 
   </body>
-  <footer style="text-align: center;" class="nav">
+  <footer style="text-align: center;" class="article">
    <blockquote cite="">
        <!-- Date Accessed 20240214-->
      </blockquote>
