--- a/developer and features pages/Features.html
+++ b/developer and features pages/Features.html
@@ -24,6 +24,27 @@
 
       <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
       <style>
+         
+a:link {
+  color: aqua;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: aqua;
+  text-decoration:underline;
+}
+
+a:hover {
+  color: lawngreen;
+  text-decoration: wavy;
+}
+
+a:active {
+  color: aquamarine;
+  text-decoration:wavy;
+}
+
          *{
            box-sizing: border-box;
            font-size: 1.75vw;
