--- a/developer and features pages/Music Included.html
+++ b/developer and features pages/Music Included.html
@@ -24,18 +24,18 @@
 
       <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
       <style>
-        a:link {
-  color: aqua;
+a:link {
+  color: rgb(1, 88, 67);
   text-decoration: underline;
 }
 
 a:visited {
-  color: aqua;
+  color: rgb(8, 0, 255);
   text-decoration:underline;
 }
 
 a:hover {
-  color: lawngreen;
+  color: black;
   text-decoration: wavy;
 }
 
