--- a/features page/Features.html
+++ b/features page/Features.html
@@ -158,7 +158,7 @@ a:active {
      </nav>
 
      <main class="main">
-       <p> This Music player will be using music that is from Linkin Park and will contain somr great features! one of these will be the the settings menu which will pop up after puhing on the settings gear. There also may be a few easter eggs that I may hide in the music player for testers to discover. Hopefully there wont be many bugs left after I release thi smusic player, feel free to contact me if there are major issues.  </p>
+       <p> This Music player will be using music that is from Linkin Park and will contain some great features! one of these will be the settings menu which will pop up after puhing on the settings gear. There also may be a few easter eggs that I may hide in the music player for testers to discover. Hopefully there wont be many bugs left after I release this music player, feel free to contact me if there are major issues.  </p>
        <br>
        <br>
 
