--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -51,7 +51,8 @@ a:active {
              border:thin dotted rgb(255, 68, 0)
           } 
           header{
-            border: 1px solid rgb(47, 226, 11);
+            background: black;
+            color:orangered;
            padding: 15px;
            font-size: 5vw;
           }
@@ -59,41 +60,46 @@ a:active {
           width: 25%;
           float: left;
           padding: 15px;
-          border: 1px solid rgb(115, 0, 255)
+          background: orangered;
+            color: black;
 
           }
           .main{
           width: 50%;
           float: left;
           padding: 15px;
-          border:1px double rgb(0, 200, 255)
+          background: black;
+            color: orangered;
 
           }
           .aside{
           width:25%;
           float: left;
           padding: 15px;
-          border: 2px solid rgb(0, 0, 0)
+          background: black;
+            color: orangered;
 
           }
           .footer{
            float:left;
            width:100%;
           padding: 14px;
-          border: 2px solid rgb(102, 0, 255)
-
+          background: black;
+            color: orangered;
           }
           .section{ 
           width: 100%;
           float:left;
           padding: 15px;
-          border: 5px solid springgreen
+          background: orangered;
+            color: black;
          }
          .article{
              float:left;
              width: 100%;
              padding: 15px;
-             border: thick double rgb(132, 255, 0);
+             background: black;
+            color: orangered;
           }
 
       </style>
