--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -25,12 +25,12 @@
       <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
       <style>
     a:link {
-  color: aqua;
+  color: orangered;
   text-decoration: underline;
 }
 
 a:visited {
-  color: aqua;
+  color: orangered;
   text-decoration:underline;
 }
 
@@ -40,7 +40,7 @@ a:hover {
 }
 
 a:active {
-  color: aquamarine;
+  color: orangered;
   text-decoration:wavy;
 }
          *{
@@ -100,6 +100,11 @@ a:active {
              padding: 15px;
              background: black;
             color: orangered;
+          }
+        
+          .blockquote{
+            background: orangered;
+            color:black;
           }
 
       </style>
