--- a/developer and features pages/Developer.html
+++ b/developer and features pages/Developer.html
@@ -128,9 +128,9 @@ a:active {
      <ul style="list-style-type:lower-latin;">
       <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/">Home Page</a></li>
       <br>
-      <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Features.html">Features of my music player</a></li>
+      <li><a href="../https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Features.html">Features of my music player</a></li>
       <br>
-      <li><a href="https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Music%20Included.html">Music Included in Player</a></li>
+      <li><a href="../https://wmonk57.github.io/Sandbox-Music-Player-Promo.github.io/developer%20and%20features%20pages/Music%20Included.html">Music Included in Player</a></li>
 
 
      <br>
